# llama-index-python

./: .pre-commit-config.yaml  README.md  azure.yaml  package.json  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: azure-dev.yml  build-test.yaml  build-test.yml  validate-infra.yaml
backend/: main.py  pyproject.toml
backend/app/: settings.py
backend/cache/: doc_store.json  index_store.json  vector_store.json
docs/: readme.md
frontend/: .env  package-lock.json  package.json  pnpm-lock.yaml
infra/: main.bicep  main.parameters.json
infra/app/: llama-index-python.bicep
infra/shared/: cognitiveservices.bicep
